fix button on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -788,10 +788,6 @@ video {
   margin-right: 1rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
-}
-
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -887,10 +883,6 @@ video {
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
-}
-
-.pr-12{
-  padding-right: 3rem;
 }
 
 .pt-32{
@@ -1133,8 +1125,16 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
   .md\:justify-start{
     justify-content: flex-start;
+  }
+
+  .md\:mt-0{
+    margin-top: 0px;
   }
 
   .md\:mr-0{
@@ -1143,6 +1143,10 @@ video {
 
   .md\:ml-0{
     margin-left: 0px;
+  }
+
+  .md\:ml-4{
+    margin-left: 1rem;
   }
 
   .md\:text-left{
